src/sass/blocks/_portfolio.scss
.portfolio {
  position: relative;
  padding: 120px 0 0 0;
  background-color: $navy-blue-color;
  position: relative;
  &__img {
    margin-top: 30px;
    img {
      width: 100%;
    }
  }
  &__title {
    text-align: center;
    @include before_circle;
    &:before {
      top: -5px;
      left: 50%;
      transform: translateX(-50%);
    }
  }
  &__subtitle {
    text-align: center;
  }
  &__wrapper {
    transition: all .66s;
    margin-top: 60px;
    display: grid;
    grid-template: repeat(2, 280px) / repeat(4, 280px);
    grid-template-rows: 280px;
    gap: 5px;
  }
  &__item {
    position: relative;
    overflow: hidden;
    border-radius: 15px;
    width: 100%;
    transition: all .7s ease;
    img {
      transition: all .7s ease;
      object-fit: cover;
      width: 100%;
      height: 100%;
    }
  }
  &__link {
    &:hover {
      img {
        transform: scale(1.2);
        filter: contrast(120%);
        transition: all .7s ease;
      }
    }
  }
  &__github {
    z-index: 1;
    position: absolute;
    right: 10px;
    bottom: 10px;
    img {
      width: 60px;
    }
    &:hover {
      img {
        transition: all .89s ease;
        transform: rotateY(180deg);
      }
    }
  }
  .vertical-1 {
    grid-column: 4;
    grid-row: 1/3;
  }
  .vertical-2 {
    grid-column: 1;
    grid-row: 2/4;
  }
  .horizontal {
    grid-column: 2/4;
    grid-row: 2;
  }
  .opacity {
    opacity: 0.35;
  }
}

